--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 * {
   font-family: "Montserrat";
   color: #105a4e;
-  background-image: url(../images/background.jpeg);
+  background-image: url(../images/background.jpg);
   text-decoration: none;
   margin: 0;
 }
