--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@
 
 .nav-bar {
   display: flex;
-  background-color: transparent;
   justify-content: center; /* Center the entire navbar */
   align-items: center;
   width: 100%;
@@ -45,7 +44,7 @@
   padding: 10px 20px;
   border-radius: 50px;
   transition: 0.2s;
-  background: none;
+  background: transparent;
   border: none;
   cursor: pointer;
 }
