fix background image

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: "Montserrat";
-  background-image: url(../images/background.jpeg); 
+  background-image: url(../images/background.JPEG); 
   background-size: cover; 
   background-repeat: no-repeat; 
   background-attachment: fixed; 
