--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   --logo-hover: #578b83;
   --primary-color: #c6926e;
   --secondary-color: #765742; 
-  --background-image: url(../images/background.jpeg); 
+  --background-image: url(../images/background.JPEG); 
 }
 
 .dark-mode {
