add dark/light mode, update nav bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,23 +8,20 @@
   src: url(../fonts/montserrat.ttf);
 }
 :root {
-  --background-color: #fdf5f59c;
   --text-color: #105a4e;
   --nav-background-hover: rgba(16, 90, 78, .3);
   --nav-text-hover: white;
-  --logo-hover: #578b83;
-  --primary-color: #c6926e;
-  --secondary-color: #765742; 
-  --background-image: url(../images/background.JPEG); 
+  --text-hover: #578b83;
+  --background-image: url(../images/light-mode.JPEG); 
 }
 
 .dark-mode {
-  --background-color: #3a3939b4;
-  --text-color: red;
-  --slider-color: #516e6a;
-  --primary-color: #093384;
-  --secondary-color: #000056; 
-  /* --background-image: url("../picture/night.jpg"); */
+  --text-color: #e7d2cb;
+  --nav-background-hover: rgba(231, 210, 203, 0.3);
+  --nav-text-hover: #105a4e;
+  --text-hover: #283735;
+  --slider-color: #283735;
+  --background-image: url(../images/dark-mode.JPEG); 
 }
 
 /* Ensure box-sizing */
@@ -67,7 +64,7 @@ body {
 }
 
 .home:hover {
-  color: var(--logo-hover);
+  color: var(--text-hover);
 }
 
 header {
@@ -113,7 +110,7 @@ header {
 
 .nav-bar ul li a {
   display: block;
-  font-size: 20px;
+  font-size: 16px;
   padding: 10px 25px;
   border-radius: 50px;
   transition: 0.2s;
@@ -136,73 +133,6 @@ header {
 .nav-right li {
   margin-left: 30px;
 }
-
-/* header {
-  display: flex;
-  align-items: center; 
-  justify-content: space-between;
-  padding: 10px 100px; 
-}
-
-.home {
-  font-family: "Acorn";
-  font-size: 24px;
-  font-weight: bold;
-  margin: 0; 
-  background-color: transparent;
-}
-
-.nav-bar {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end; 
-  width: 100%;
-  margin: 10px 0;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-  opacity: 0;
-  transform: translateY(-20px);
-  animation: fadeInUp 0.2s forwards;
-}
-
-
-.nav-bar ul {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-bar ul:first-of-type {
-  margin-right: auto; 
-}
-
-.nav-bar ul:last-of-type {
-  margin-left: auto; 
-}
-
-.nav-bar ul li {
-  margin: 0 10px; 
-  background: transparent;
-}
-
-.nav-bar ul li a {
-  background: transparent;
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  padding: 10px 20px;
-  border-radius: 50px;
-  transition: 0.2s;
-  border: none;
-  cursor: pointer;
-}
-
-.nav-bar ul li a:hover {
-  background: rgba(16, 90, 78, .3);
-  color: white;
-} */
-
 
 h1 {
   font-family: Acorn;
@@ -238,11 +168,12 @@ p {
 
 .description a {
   font-weight: bold;
+  color: var(--text-hover);
   transition: color 0.3s ease, border-bottom-color 0.3s ease;
 }
 
 .description a:hover {
-  color: #578b83; 
+  color: var(--text-color); 
 }
 
 /* Style for the link-boxes container */
@@ -291,21 +222,20 @@ p {
 footer {
   text-align: center;
   margin-top: 50px;
-  margin-bottom: 50px;
   font-size: 40px;
   transition: 0.3s ease;
   background: transparent;
 }
 
 .links a {
-  color: #333;
-  font-size: 24px;
-  margin: 0 10px;
+  color: var(--text-color);
+  font-size: 30px;
+  margin: 0 0px;
   text-decoration: none;
 }
 
 .links a:hover {
-  color: #000;
+  color: var(--text-hover);
 }
 
 .theme-switch {
@@ -340,10 +270,10 @@ footer {
   background-repeat: no-repeat;
   transition: 0.4s;
   border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  left: -6px;
-  bottom: -8px;  
+  height: 65px;
+  width: 65px;
+  left: -15px;
+  bottom: -16px;  
   background-image: url("../images/sun.png"); /* Default to sun image */
 }
 
@@ -356,5 +286,5 @@ input:checked + .slider:before {
   height: 60px;
   width: 60px;
   bottom: -12px;
-  transform: translateX(20px);
+  transform: translateX(28px);
 }
