--- a/styles/photos.css
+++ b/styles/photos.css
@@ -27,7 +27,7 @@
 
 .photo-box .title {
     position: absolute;
-    font-family: Montserrat;
+    font-family: Acorn;
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); /* Center the text */
