--- a/styles/blueboard.css
+++ b/styles/blueboard.css
@@ -1,23 +1,3 @@
-@font-face {
-    font-family: Acorn;
-    src: url(../fonts/acorn-medium.ttf);
-}
-
-:root {
-    --text-hover: #578b83;
-  }
-  
-.dark-mode {
-    --text-hover: #283735;
-}
-  
-@keyframes fadeInUp {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
 h1 a {
     font-family: Acorn;
     text-align: center;
@@ -48,18 +28,18 @@ h1 a:hover {
 
 .link-box {
     display: block;
-    padding: 50px;
+    padding: 30px;
     text-decoration: none;
     border-radius: 35px;
     transition: transform 0.2s ease;
     background-repeat: no-repeat;
-    position: relative;  
+    position: relative;
     transition:
-        transform 0.5s ease,
-        opacity 0.3s ease;
+      transform 0.3s ease,
+      opacity 0.3s ease;   
     opacity: 0;
-    transform: translateY(-80px);
-    animation: fadeInUp 0.7s forwards;
+    transform: translateY(-20px);
+    animation: fadeInUp 0.8s forwards;
 }
 
 .box-title {
@@ -69,7 +49,7 @@ h1 a:hover {
     color: #354542;
 }
 
-.features p {
+.description p {
     color: #354542;
     text-align: left;
     font-size: 18px;
@@ -78,39 +58,82 @@ h1 a:hover {
     margin-bottom: 4%;
 }
 
-.features a {
+.description a {
     font-weight: bold;
     color: #354542;
 }
 
-.features a:hover {
+.description a:hover {
     color: #e7d2bc;
 }
 
-.features ul li {
+.description ul li {
     color: #354542;
     line-height: 1.6;
     margin-top: 2%;
     margin-bottom: 2%;
+    transition:
+      transform 0.3s ease,
+      opacity 0.3s ease;   
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeInUp 0.8s forwards;
 }
 
-.features ul li strong {
+.description ul li strong {
     color: #354542;
 }
 
 .link-box:first-of-type {
+    background-color: transparent;
+    height: 0px;
+    width: 30%; 
+}
+
+.link-box:nth-of-type(2) {
+    background-color: #AEC5A5;
+    height: 0px;
+    width: 20%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.website {
+    color: #354542;
+    font-family: Acorn;
+    text-align: center;
+}
+
+.website a {
+    font-family: Acorn;
+    color: #354542;
+}
+
+.website a:hover {
+    color: #e7d2cb;
+}
+
+.link-box:nth-of-type(3) {
+    background-color: transparent;
+    height: 0px;
+    width: 30%; 
+}
+
+.link-box:nth-of-type(4) {
     background-color: #f3a1ad;
     height: 520px;
     width: 500px; 
 }
 
-.link-box:nth-of-type(2) {
+.link-box:nth-of-type(5) {
     background-color: #a3dcd5;
     width: 550px; 
     height: 660px;
 }
 
-.link-box:nth-of-type(3) {
+.link-box:nth-of-type(6) {
     background-color: #C78476;
     width: 450px; 
     height: 345px;
@@ -124,18 +147,6 @@ h1 a:hover {
     margin-bottom: 1%; 
     width: 40%;
     text-align: left; 
-    position: relative; 
-}
-
-.description {
-    display: block;
-    margin: 20px auto;
-    font-weight: 500;
-    text-align: left;
-    line-height: 1.6;
-    color: #4C6662;
-    width: 40%;
-    margin-bottom: 1%;
     position: relative; 
 }
 
