--- a/styles/photos.css
+++ b/styles/photos.css
@@ -5,6 +5,12 @@
     gap: 20px; 
     margin: auto;
     max-width: 1200px; 
+    transition:
+      transform 0.3s ease,
+      opacity 0.3s ease;   
+    opacity: 0;
+    transform: translateY(-30px);
+    animation: fadeInUp 0.8s forwards;
 }
 
 .photo-box {
@@ -73,4 +79,14 @@
 
 .photo-categories:hover {
   transform: scale(1.05);
+}
+
+.description a {
+  font-weight: bold;
+  color: var(--text-color);
+  transition: color 0.3s ease, border-bottom-color 0.3s ease;
+}
+
+.description a:hover {
+  color: var(--text-hover);
 }
