--- a/styles/blueboard.css
+++ b/styles/blueboard.css
@@ -60,6 +60,7 @@ h1 a:hover {
 
 .description a {
     font-weight: bold;
+    font-size: 18px;
     color: #354542;
 }
 
@@ -97,7 +98,6 @@ h1 a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .website {
@@ -108,6 +108,7 @@ h1 a:hover {
 
 .website a {
     font-family: Acorn;
+    font-size: 20px;
     color: #354542;
 }
 
@@ -123,20 +124,20 @@ h1 a:hover {
 
 .link-box:nth-of-type(4) {
     background-color: #f3a1ad;
-    height: 520px;
-    width: 500px; 
+    height: 570px;
+    width: 435px; 
 }
 
 .link-box:nth-of-type(5) {
     background-color: #a3dcd5;
-    width: 550px; 
-    height: 660px;
+    width: 500px; 
+    height: 700px;
 }
 
 .link-box:nth-of-type(6) {
     background-color: #C78476;
-    width: 450px; 
-    height: 345px;
+    width: 350px; 
+    height: 325px;
 }
 
 .subtitle {
