--- a/styles/photos.css
+++ b/styles/photos.css
@@ -1,14 +1,16 @@
 
-.photos {
+.container {
     display: flex;
+    flex-wrap: wrap;
     gap: .5rem; 
+    justify-content: center;
     padding: 0 .5rem;
   }
   
 .column {
     display: flex;
     flex-direction: column; 
-    gap: 1rem; 
+    gap: .5rem; 
   }
 
   .photo-categories {
