--- a/styles/style.css
+++ b/styles/style.css
@@ -53,11 +53,11 @@
 }
 
 body {
-  /* background-attachment: fixed; 
+  background-attachment: fixed; 
   background-image: var(--background-image);
   background-position: center; 
   background-repeat: no-repeat; 
-  background-size: cover;  */
+  background-size: cover; 
   box-sizing: border-box;
 }
 
