--- a/styles/about.css
+++ b/styles/about.css
@@ -27,18 +27,38 @@ h2, h3 {
     text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+h2 a {
+    color: var(--text-hover);
+
+    &:hover {
+        color: var(--text-color);
+    }
+}
+
+@media screen and (min-width: 650px) {
     main {
         padding: 0 2rem;
     }
 
     p {
-        line-height: 25px;
+        line-height: 30px;
         margin-top: .5rem;
     }
 
     h2, h3 {
-        font-size: 1.5rem;
+        font-size: 2rem;
         margin-top: 2rem;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    p {
+        line-height: 35px;
+        margin-top: .75rem;
+    }
+
+    h2, h3 {
+        font-size: 2.5rem;
+        margin-top: 2.5rem;
     }
 }
