--- a/styles/blueboard.css
+++ b/styles/blueboard.css
@@ -1,5 +1,15 @@
-h1 a {
+#link-box2 {
+    background-color: #AEC5A5;
+    border-radius: 35px;
+    height: 50px;
+    padding: 10px 30px;
+    width: 300px; 
+}
+
+.website {
+    color: var(--project-text-color);
     font-family: var(--acorn-font);
+    text-align: center;
 }
 
 .link-boxes {
@@ -16,23 +26,26 @@ h1 a {
         opacity 0.3s ease; */
   }
   
-  .link-box {
+.link-box {
     border-radius: 35px;
     padding: 20px 30px;
-    transition: transform 0.2s ease;
     width: 300px; 
-  }
+}
 
 .box-title {
     color: var(--project-text-color);
     font-family: var(--acorn-font);
-    font-size: 35px;
+    font-size: 2.1875rem;
     text-align: left;
 }
 
-.description p {
+h1 a {
+    font-family: var(--acorn-font);
+}
+
+.description li {
     color: var(--project-text-color);
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 1.6;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -41,8 +54,20 @@ h1 a {
 
 .description a {
     color: var(--project-text-color);
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: bold;
+}
+
+.website a {
+    color: var(--project-text-color);
+    font-family: var(--acorn-font);
+    font-size: 1.25rem;
+}
+
+.login-image img {
+    border-radius: 5px;
+    display: block;
+    margin: var(--rhythm) auto;
 }
 
 .description a:hover {
@@ -66,54 +91,52 @@ h1 a {
     }
 }
 
+.website a:hover {
+    color: #578b83;
+}
 
 .description ul li strong {
     color: var(--project-text-color);
 }
 
 .link-box:first-of-type {
-    background-color: #AEC5A5;
-    height: 20px;
-    width: 200px;
-}
-
-.website {
-    color: var(--project-text-color);
-    text-align: center;
-    font-family: var(--acorn-font);
-}
-
-
-.website a {
-    color: var(--project-text-color);
-    font-family: var(--acorn-font);
-    font-size: 20px;
-    text-align: center;
-}
-
-.website a:hover {
-    color: #578b83;
-}
-
-.link-box:nth-of-type(2) {
     background-color: #f3a1ad;
 }
 
-.link-box:nth-of-type(3) {
+.link-box:nth-of-type(2) {
     background-color: #a3dcd5;
 }
 
-.link-box:nth-of-type(4) {
+.link-box:nth-of-type(3) {
     background-color: #C78476;
 }
 
-.login-image {
-    /* animation: fadeInUp 0.5s forwards; */
-    margin: 2.5rem 3.75rem; 
-    border-radius: 5px;
-    /* transition:
-        transform 0.5s ease,
-        opacity 0.3s ease;
-    opacity: 0;
-    transform: translateY(-50px); */
+
+@media screen and (min-width: 650px) {
+    li {
+      font-size: 1.125rem;
+    }
+}
+
+@media screen and (min-width: 750px) {
+    .link-box:first-of-type {
+        height: 550px;
+    }
+}
+@media screen and (min-width: 1140px) {
+    .link-box:nth-of-type(2) {
+        width: 35%;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    li {
+      font-size: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1293px) {
+    .link-box:nth-of-type(3) {
+        height: 350px;
+    }
 }
