--- a/styles/photos.css
+++ b/styles/photos.css
@@ -1,34 +1,55 @@
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: .5rem; 
-    justify-content: center;
-    padding: 0 .5rem;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: .5rem; 
+  justify-content: center;
+  padding: 0 .5rem;
+}
   
 .column {
-    display: flex;
-    flex-direction: column; 
-    gap: .5rem; 
-  }
+   display: flex;
+   flex-direction: column; 
+   gap: .5rem; 
+}
 
-  .photo-categories {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: center;
-  }
+.photo-categories {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.photo-card {
+  position: relative;
+}
+
+.photo-card img {
+  border-radius: 5px;
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
+.photo-title {
+  color: white;
+  font-family: var(--acorn-font);
+  font-size: 2rem;
+  left: 50%;
+  position: absolute;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
 /* for cover photos in photos.html */
 .photo-categories a img {
-    transition: transform 0.2s ease;
+  transition: transform 0.2s ease;
 }
 
 .photo-categories a img:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
-
-/* TODO: add title to cover photos */
 
 
