--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
     --lighter-text-color: rgb(16, 90, 78, .8);
 
     --nav-background-hover: rgba(16, 90, 78, .3);
-    /* --nav-text-hover: white; */
+    --nav-text-hover: white;
 
     --menu-text-color: #e7d2cb;
     --menu-background-color: rgb(16, 90, 78);
@@ -133,6 +133,7 @@ header {
           padding-block: 1rem;
           padding-inline: 1rem;
           text-decoration: none;
+          transition: 0.3s ease;
   
           &:hover {
             background-color: var(--menu-text-color);
@@ -189,6 +190,10 @@ footer a i {
 footer a i:hover {
     color: var(--text-hover);
     transform: scale(1.45);
+}
+
+.home {
+  display: none;  
 }
 
 .link-boxes {
@@ -291,12 +296,82 @@ footer a i:hover {
 }
 
 
+@media screen and (min-width: 1024px) {
+  .nav-toggle-label, label, input {
+    display: none;
+  }
+
+  h1 {
+    padding-top: 5rem;
+  }
+
+  .home {
+    background-color: transparent;
+    display: flex;
+    font-family: var(--acorn-font);
+    font-size: 1.5rem;
+    grid-column: 1/2;
+    height: 50px;
+    justify-content: center;
+    margin: 35px;
+    text-align: center;
+    transition: 0.2s ease;
+    
+    &:hover {
+      color: var(--text-hover);
+      transform: scale(1.05);
+    }
+  }
+
+header {
+    background: none;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    padding: 0 2rem;
+    position: static;
+  } 
+
+  nav {
+    background: none;
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    margin: 30px;
+    position: static;
+    width: auto;
+
+    ul {
+      display: flex;
+      gap: 1rem;
+
+      li {
+        a {
+          background-color: transparent;
+          border-radius: 50px;
+          color: var(--text-color);
+          display: block;
+          font-family: var(--montserrat-font);
+          font-size: 1rem;
+          padding: 10px 25px;
+          transition: 0.2s ease;
+
+          &:hover {
+            background-color: var(--nav-background-hover);
+            color: var(--nav-text-hover);
+          }
+        }
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 1280px) {
   h1 {
     font-size: 6.875rem;
+    padding-top: 6rem;
   }
 
   p {
     font-size: 1.5rem;
   }
-}
+} 
