--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,3 +1,73 @@
+p {
+  padding: 0 1rem;
+}
+
+.container {
+  max-width: 1540px;
+  margin: 0 auto;
+}
+
 .link-box:hover {
   transform: scale(1.05);
+}
+
+@media screen and (min-width: 690px) {
+  .link-box:first-of-type {
+    width: 250px;
+  }
+
+  .link-box:nth-of-type(2) {
+    width: 350px;
+  }
+
+  .link-box:nth-of-type(3) {
+    width: 500px;
+  }
+
+  .link-box:nth-of-type(4) {
+    width: 550px;
+  }
+}
+
+@media screen and (min-width: 1042px) {
+  .above-text {
+    font-size: 1.35rem;
+  }
+  
+  .box-title {
+    font-size: 2.5rem;
+  }
+
+  .link-box {
+    height: 350px;
+    padding-top: 35px;
+  }
+  
+  .link-box:first-of-type {
+    width: 350px;
+  }
+
+  .link-box:nth-of-type(2) {
+    width: 450px;
+  }
+
+  .link-box:nth-of-type(3) {
+    width: 600px;
+  }
+
+  .link-box:nth-of-type(4) {
+    width: 650px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .link-boxe {
+    padding-top: 45px;
+  }
+} 
+
+@media screen and (min-width: 1540px) {
+  .link-boxes {
+    max-width: 1540px;
+  }
 }
