--- a/styles/resume.css
+++ b/styles/resume.css
@@ -39,6 +39,10 @@ p {
     text-align: left;
 }
 
+.parent {
+    margin: 0 auto;
+}
+
 .parent ul {
     margin-top: .5rem;
     padding-left: var(--rhythm * 1.35);
@@ -82,6 +86,7 @@ p + ul {
 @media screen and (min-width: 830px) {
     .parent {
         display: grid;
+        gap: 1.5rem;
         grid-template-columns: 35% 65%;
         justify-items: center;
     }
@@ -120,5 +125,11 @@ p + ul {
 
     .experience li {
         line-height: 1.875rem;
+    }
+}
+
+@media screen and (min-width: 1550px) {
+    .parent {
+        max-width: 1550px;
     }
 }
