--- a/styles/style.css
+++ b/styles/style.css
@@ -197,17 +197,17 @@ footer a i:hover {
 }
 
 .link-boxes {
-  /* animation: fadeInUp 0.5s forwards; */
+  animation: fadeInUp 0.5s forwards;
   display: flex;
   flex-wrap: wrap;
   gap: 30px; 
   justify-content: center;
   margin-top: 30px;
-  /* opacity: 0; 
+  opacity: 0; 
   transform: translateY(-50px);
   transition:
       transform 0.5s ease,
-      opacity 0.3s ease; */
+      opacity 0.3s ease;
 }
 
 .link-box {
@@ -216,6 +216,7 @@ footer a i:hover {
   padding-left: 30px;
   transition: transform 0.2s ease;
   width: 300px; 
+  z-index: 1;
 }
 
 .above-text {
