--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: Acorn;
-    src: url(../fonts/acorn-medium.ttf);
+    src: url("../fonts/acorn-medium.ttf");
 }
   
 @font-face {
     font-family: Montserrat;
-    src: url(../fonts/montserrat.ttf);
+    src: url("../fonts/montserrat.ttf");
 }
   
 @keyframes fadeInUp {
@@ -28,7 +28,7 @@
 
     --project-text-color: #354542;
 
-    --background-image: url(../images/light-mode.JPEG); 
+    --background-image: url("../images/light-mode.JPEG"); 
     --acorn-font: 'Acorn', sans-serif;
     --montserrat-font: 'Montserrat', sans-serif;
 
@@ -104,6 +104,14 @@ header {
       }
     }
   }
+
+p a {
+    font-weight: bold;
+}
+
+p a:hover {
+    color: var(--text-hover);
+}
   
   nav {
     background: var(--menu-background-color);
@@ -166,17 +174,6 @@ footer {
 
 footer h1 {
     margin: 0;
-}
-
-p a {
-    font-weight: bold;
-}
-
-p a:hover {
-    color: var(--text-hover);
-}
-
-footer h1 {
     padding-top: 30px;
 }
 
@@ -197,17 +194,11 @@ footer a i:hover {
 }
 
 .link-boxes {
-  animation: fadeInUp 0.5s forwards;
   display: flex;
   flex-wrap: wrap;
   gap: 30px; 
   justify-content: center;
   margin-top: 30px;
-  opacity: 0; 
-  transform: translateY(-50px);
-  transition:
-      transform 0.5s ease,
-      opacity 0.3s ease;
 }
 
 .link-box {
@@ -216,7 +207,6 @@ footer a i:hover {
   padding-left: 30px;
   transition: transform 0.2s ease;
   width: 300px; 
-  z-index: 1;
 }
 
 .above-text {
@@ -239,17 +229,6 @@ footer a i:hover {
 .link-box:nth-of-type(2) {
   background-color: #a3dcd5;
 }
-
-.link-box:first-of-type img {
-  margin-top: 20px; 
-  margin-left: 30px;
-}
-
-.link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img, .link-box:nth-of-type(4) img {
-  border-radius: 15px 15px 0px 0px;
-  margin-top: 1.25rem; 
-  margin-left: 0.8125rem;
-} 
 
 .link-box:nth-of-type(3) { 
   background-color: #C78476;
@@ -298,7 +277,7 @@ footer a i:hover {
 
 
 @media screen and (min-width: 1024px) {
-  .nav-toggle-label, label, input {
+  .nav-toggle-label, label, input, nav ul li:first-child {
     display: none;
   }
 
@@ -313,8 +292,8 @@ footer a i:hover {
     font-size: 1.5rem;
     grid-column: 1/2;
     height: 50px;
-    justify-content: center;
-    margin: 35px;
+    justify-content: left;
+    margin: 35px 0;
     text-align: center;
     transition: 0.2s ease;
     
@@ -324,7 +303,7 @@ footer a i:hover {
     }
   }
 
-header {
+  header {
     background: none;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -364,15 +343,20 @@ header {
       }
     }
   }
+
+  .link-boxes {  
+    animation: fadeInUp 0.5s forwards;
+    opacity: 1;
+    transform: translateY(-50px);
+    transition:
+      transform 0.5s ease, 
+      opacity 0.3s ease;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   h1 {
     font-size: 6.875rem;
     padding-top: 6rem;
-  }
-
-  p {
-    font-size: 1.5rem;
   }
 } 
