update: add left margin for 'home' link in the top left

--- a/styles/style.css
+++ b/styles/style.css
@@ -303,7 +303,7 @@ footer a i:hover {
     grid-column: 1/2;
     height: 50px;
     justify-content: left;
-    margin: 35px 0;
+    margin: 35px 35px 15px 0;
     text-align: center;
     transition: 0.2s ease;
     
